# mediafx-qt

./: .clang-tidy  .gitignore  .gitmodules  .qmlformat.ini  .qmllint.ini  CMakeLists.txt  CNAME  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  iwyu.yml
.github/workflows/doc/: kramdown.html
builders/: aqtinstall-requirements.txt  mediafx-build.sh  mediafx-test.sh  versions
builders/Darwin/: env  install-qt6.sh  mediafx-build.sh  versions
builders/Linux/: Dockerfile  build-docs.sh  docker-build.sh  docker-run.sh  entrypoint.sh  env  iwyu.sh  lint.sh  mediafx-build.sh
builders/linux/: Dockerfile  docker-build.sh  docker-run.sh  entrypoint.sh  iwyu.sh  mediafx-build.sh
builders/macos/: install-qt6.sh  mediafx-build.sh  versions
mediafx/: CMakeLists.txt  animation.h  audio_clip.cpp  audio_clip.h  clip.cpp  clip.h  image_clip.cpp  image_clip.h  main.cpp  media_clip.cpp  media_clip.h  mediafx.cpp  mediafx.h  render_control.cpp  render_control.h  session.cpp  session.h  video_clip.cpp  video_clip.h  visual_clip.cpp  visual_clip.h
src/MediaFX/: CMakeLists.txt  MediaSequence.qml  MediaSequenceClip.qml  MultiEffectState.qml  ShaderEffectState.qml  Transformer.qml  VideoRenderer.qml  animation.h  app-encoder.qml  app-viewer.qml  application.cpp  application.h  audio.h  audio_renderer.cpp  audio_renderer.h  audio_stream.cpp  audio_stream.h  audio_track.cpp  audio_track.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  error_info.h  event_logger.h  formats.h  interval.cpp  interval.h  main.cpp  media.cpp  media.h  media_clip.cpp  media_clip.h  media_manager.cpp  media_manager.h  mediafx-qmlmodule.qdoc  output_format.h  output_stream.cpp  output_stream.h  render_context.cpp  (+20 more)
src/MediaFX/Mixers/: CMakeLists.txt  CrossFadeMixer.qml  LumaGradientMixer.qml  LumaMixer.qml  MediaMixer.qml  MediaMixerShaderEffect.qml  PageCurlMixer.qml  WipeMixer.qml  luma.frag  mediafx-mixers-qmlmodule.qdoc  pageCurl.frag
src/MediaFX/Transition/: CMakeLists.txt  CrossFade.qml  Displacement.qml  Luma.qml  LumaGradient.qml  MediaTransition.qml  PageCurl.qml  SamKolderWipe.qml  TextDisplacement.qml  TransitionShaderEffect.qml  Wipe.qml  displacement.frag  mediafx-transition-qml-module.qdoc
src/MediaFX/Transition/GL/: Bounce.qml  Burn.qml  ButterflyWaveScrawler.qml  CMakeLists.txt  ColorPhase.qml  ColourDistance.qml  CrazyParametricFun.qml  CrossHatch.qml  CrossWarp.qml  CrossZoom.qml  Cube.qml  DirectionalWarp.qml  DoomScreen.qml  Doorway.qml  Dreamy.qml  DreamyZoom.qml  FadeColor.qml  FadeGrayscale.qml  FlyEye.qml  GlitchDisplace.qml  GlitchMemories.qml  GridFlip.qml  Hexagonalize.qml  Kaleidoscope.qml  LinearBlur.qml  LuminanceMelt.qml  Morph.qml  Mosaic.qml  MultiplyBlend.qml  Perlin.qml  Pixelize.qml  PolkaDotsCurtain.qml  RandomSquares.qml  Ripple.qml  RotateScaleFade.qml  SimpleZoom.qml  SquaresWire.qml  Squeeze.qml  StereoViewer.qml  Swap.qml  (+11 more)
src/MediaFX/Viewer/: CMakeLists.txt  LabeledControl.qml  TransitionViewer.qml  UICheckBox.qml  UIColorDialog.qml  UIComboBox.qml  UIFileDialog.qml  UIIntSpinBox.qml  UIRealSpinBox.qml  UIRealTextInput.qml  UISlider.qml  UITextField.qml
src/MediaFX/doc/: CMakeLists.txt  mediafx-qml-types.qdoc  mediafx.qdocconf  modules.qdoc
src/MediaFX/doc/style/: highlight.css  offline.css
src/MediaFX/qml/: MediaSequence.qml  MultiEffectState.qml  ShaderEffectState.qml  sequence.js
src/MediaFX/qml/effects/: CrossFadeMixer.qml  LumaMixer.qml  crossfade.frag  luma.frag
src/MediaFX/qml/mixers/: CrossFadeMixer.qml  LumaGradientMixer.qml  LumaMixer.qml  MediaMixer.qml  WipeMixer.qml  crossfade.frag  luma.frag  mixers.qdoc
src/mediafx/: CMakeLists.txt  animation.h  audio_clip.cpp  audio_clip.h  audio_track.h  clip.cpp  clip.h  encoder.cpp  encoder.h  event_logger.h  image_clip.cpp  image_clip.h  interval.h  main.cpp  media.h  media_clip.cpp  media_clip.h  mediafx.cpp  mediafx.h  rate_control.cpp  rate_control.h  render_control.cpp  render_control.h  session.cpp  session.h  track.cpp  track.h  util.h  video_clip.cpp  video_clip.h  video_sink.cpp  video_sink.h  video_track.cpp  video_track.h  visual_clip.cpp  visual_clip.h
src/mediafx/qml/: MultiEffectState.qml
tests/: CMakeLists.txt  qmltest.sh  tst_decoder.cpp  tst_encoder.cpp  tst_interval.cpp  tst_shaders.cpp
tests/qml/: Demo3DMediaMixer.qml  Demo3DTransition.qml  animated.qml  async.qml  demo.qml  gl-transitions.qml  grayscale.frag  multisink.qml  sequence.qml  splitscreen.qml  static.qml  transformer.qml  video-ad-insertion.qml  video-clipstart.qml  video-multieffect.qml  video-shadereffect.qml
tools/: create-asset.sh  create-video.sh  create_mov.sh  diff-video.sh  encode-asset.sh  framehash.sh  generate-assets.sh  hash.sh
tools/qml/: LumaMixerViewer.qml
tools/viewer/: CMakeLists.txt  MediaMixerViewer.qml  main.cpp
tools/viewer/qml/: MediaMixerViewer.qml
