# Copyright (C) 2024 Andrew Wason
#
# This file is part of mediaFX.
#
# mediaFX is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software Foundation,
# either version 3 of the License, or (at your option) any later version.
#
# mediaFX is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with mediaFX.
# If not, see <https://www.gnu.org/licenses/>.

qt_add_executable(mediafxviewer
    main.cpp
)

target_link_libraries(mediafxviewer PUBLIC mediafx mediafxplugin)

qt_add_qml_module(mediafxviewer
    URI MediaFX.Viewer
    QML_FILES
    qml/MediaMixerViewer.qml
)

install(TARGETS mediafxviewer RUNTIME DESTINATION)
